--- a/index.html
+++ b/index.html
@@ -20,60 +20,50 @@
     <h1 class="header">
       <img class="me" src="images/lily.jpg" alt="" />
 
-      <p class="hello">
-        Lily Riopelle
-      </p>
+     <p class="hello">
+       Lily Riopelle
+     </p>
 
-      <p>
-        NYC based software engineer
-      </p>
-      <ul class="social group">
-        <li class="github">
-          <a href="http://github.com/lilykriopelle">
-            <img src="images/github.png"/>
-          </a>
-        </li>
-        <li class="linkedin">
-          <a  href="http://www.linkedin.com/in/riopelle">
-            <img src="images/linkedin.png"/>
-          </a>
-        </li>
-        <li class="twitter" >
-          <a href="http://twitter.com/lilyriopelle">
-            <img class="twitter-pic" src="images/twitter.png"/>
-          </a>
-        </li>
-      </ul>
+     <p>
+       NYC based software engineer
+     </p>
+     <ul class="social group">
+       <li class="github">
+         <a href="http://github.com/lilykriopelle">
+           <img src="images/github.png"/>
+         </a>
+       </li>
+       <li class="linkedin">
+         <a  href="http://www.linkedin.com/in/riopelle">
+           <img src="images/linkedin.png"/>
+         </a>
+       </li>
+       <li class="twitter" >
+         <a href="http://twitter.com/lilyriopelle">
+           <img class="twitter-pic" src="images/twitter.png"/>
+         </a>
+       </li>
+     </ul>
     </h1>
 
     <main>
+
       <div class="about-me">
         <h3>A LITTLE ABOUT ME</h3>
-        <div class="group">
-          <section>
-            <p>
-              As a left-brain/right-brain hybrid (think mathlete/theatre kid),
-              I never thought I'd find a field that challenged me technically and creatively.
-              I grew up dreading the day when I'd need to give up one of my passions.
-            </p>
 
-            <p>
-              Luckily, I discovered programming, and immediately fell in love with its perfect balance
-              of rigorous, logical thinking and creative problem-solving.
-            </p>
+        <p>
+          As a left-brain/right-brain hybrid (think mathlete/theatre kid),
+          I never thought I'd find a field that challenged me technically and creatively.
+          I grew up dreading the day when I'd need to give up one of my passions.
+          Luckily, I discovered programming, and fell in love with its perfect balance
+          of logic and creativity.
+        </p>
 
-            <p>
-              I currently teach Full-Stack Web Development at <a href="http://appacademy.io">App Academy</a>,
-              and blog about my experiences teaching <a href="blog">here</a>.
-            </p>
-
-            <p>
-              When I'm not teaching or coding, I can usually be found <a href="http://lilyriopelle.com">directing plays</a>,
-              consuming dangerous quantities of iced coffee (no matter the season), or adventuring around my beautiful hometown, NYC.
-            </p>
-          </section>
-        </div>
-
+        <p>
+          I currently teach Full-Stack Web Development at <a href="http://appacademy.io">App Academy</a>.
+          When I'm not teaching or coding, I can usually be found consuming
+          dangerous quantities of iced coffee and/or adventuring around my beautiful hometown, NYC.
+        </p>
       </div>
 
       <div class="skills">
@@ -95,13 +85,13 @@
             <i class="devicon-javascript-plain colored"></i>
           </li>
           <li class="skill">
+            <i class="devicon-react-original-wordmark colored"></i>
+          </li>
+          <li class="skill">
             <i class="devicon-jquery-plain-wordmark colored"></i>
           </li>
           <li class="skill">
             <i class="devicon-backbonejs-plain-wordmark colored"></i>
-          </li>
-          <li class="skill">
-            <i class="devicon-react-original-wordmark colored"></i>
           </li>
           <li class="skill">
             <i class="devicon-html5-plain-wordmark colored"></i>
@@ -124,7 +114,7 @@
           <li class="project group">
             <h4 class="project-header group">
               <p>
-              SmartCookie (Rails, Backbone.js, jQuery)
+                SmartCookie (Rails, Backbone.js, jQuery)
               </p>
               <div class="project-links">
                 <a href="http://github.com/lilykriopelle/smart_cookie">GITHUB</a>
@@ -140,18 +130,18 @@
             <p class="project-description">
               <span>Collaborative recipe development platform with annotations inspired by Genius.</span>
               <br><br>
-                Backbone front end consumes a RESTful JSON API served up by Rails.
+              Backbone front end consumes a RESTful JSON API served up by Rails.
               <br><br>
-                Gets start and end indices for annotations by reading DOM's selection object.
+              Gets start and end indices for annotations by reading DOM's selection object.
               <br><br>
-                Supports nested and overlapping annotations.
+              Supports nested and overlapping annotations.
             </p>
           </li>
 
           <li class="project group">
             <h4 class="project-header group">
               <p>
-              Asteroids (Javascript, HTML5 Canvas, jQuery)
+                Asteroids (Javascript, HTML5 Canvas, jQuery)
               </p>
               <div class="project-links">
                 <a href="http://github.com/lilykriopelle/asteroids">GITHUB</a>
@@ -167,11 +157,34 @@
             <p class="project-description">
               <span>Everyone's favorite arcade classic, coded for the browser.</span>
               <br><br>
-                Randomly generates irregular polygonal asteroid geometry.
+              Randomly generates irregular polygonal asteroid geometry.
               <br><br>
-                Uses trigonometry and transformational geometry to approximate physics and render objects.
+              Uses trigonometry and transformational geometry to approximate physics and render objects.
+            </p>
+          </li>
+
+          <li class="project group">
+            <h4 class="project-header group">
+              <p>
+                Mello (Rails, React/Flux)
+              </p>
+              <div class="project-links">
+                <a href="http://github.com/lilykriopelle/ReacTrello">GITHUB</a>
+              </div>
+            </h4>
+
+            <a class="view-project" href="http://melloreact.herokuapp.com">
+              Check it out!
+            </a>
+
+            <img class="project-preview" src="images/mello_pic.png" alt="" />
+
+            <p class="project-description">
+              <span>A project management tool with intuitive UI built with Rails and React.</span>
               <br><br>
-                Implements the Separating Axis Theorem to accurately detect collisions between irregular polygons.
+              React/Flux front-end consumes a JSON API served up by Rails for a seamless single-page user experience.
+              <br><br>
+              Uses ReactDnD to achieve fluid drag-and-drop user interactions.
             </p>
           </li>
 
@@ -192,71 +205,46 @@
             <p class="project-description">
               <span>Ruby ORM recreating the funtionality of Rails' ActiveRecord</span>
               <br><br>
-                Generates SQL queries based on naming conventions to replicate Rails associations.
+              Generates SQL queries based on naming conventions to replicate Rails associations.
               <br><br>
-                Utilizes advanced Ruby language features, such as meta-programming and reflection.
+              Utilizes advanced Ruby language features, such as meta-programming and reflection.
             </p>
           </li>
-
-          <!-- <li class="project group">
-            <h4 class="project-header group">
-              <p>
-              Node Chat (Node.js, Socket.io, jQuery)
-              </p>
-              <div class="project-links">
-                <a href="http://github.com/lilykriopelle/chat">GITHUB</a>
-              </div>
-            </h4>
-
-            <a class="view-project" href="http://nodechat.herokuapp.com">
-              Check it out!
-            </a>
-
-            <img class="project-preview" src="images/chat_pic.png" alt="" />
-
-            <p class="project-description">
-              <span>The canonical first Node project.</span>
-              <br><br>
-                Implements realtime messaging with Socket.io's event-based engine.
-              <br><br>
-                Allows users to create and join multiple rooms.
-            </p>
-          </li> -->
 
           <li class="project group">
             <h4 class="project-header group">
               <p>
-              Minesweeper (React.js, Javascript)
+              Static Sites! (React, HTML5, CSS3, jQuery, AWS)
               </p>
-              <div class="project-links">
-                <a href="http://github.com/lilykriopelle/minesweeper">GITHUB</a>
-              </div>
             </h4>
-
-            <a class="view-project" href="http://www.lilykriopelle.com/minesweeper">
-              Check it out!
-            </a>
-
-            <img class="project-preview" src="images/minesweeper_pic.png" alt="" />
+            <img class="project-preview" src="images/static_site.png" alt="" />
 
             <p class="project-description">
-              <span>Why did this game seem so hard when I was a child???</span>
+              <span>Custom-Built Static Sites for All Occasions</span>
               <br><br>
-              React.js component heirarchy efficiently renders changing game state.
+              When I'm not building web apps, I sometimes design and build static
+              sites for individuals, events, and companies.
               <br><br>
-              Evokes nostalgia by replicating those clicky tiles we all knew and loved in the 90s.
+              If you need a website, reach out for an up to date portfolio of my
+              web design work.
             </p>
           </li>
+
         </ul>
       </div>
 
-      <div class="resume contact">
+      <div class="resume">
         <h3>WANT TO KNOW MORE?</h3>
         <br>
-         <a href="documents/LilyRiopelleResume.pdf">Check out</a> my resume, or <a href="documents/LilyRiopelleResume.pdf" download="LilyRiopelleResume">download</a> it here!
-         Or, <a href="mailto:lilykriopelle@gmail.com">email me</a> to set up a meeting.
+         <a href="documents/LilyRiopelleResume.pdf">Check out</a> my resume, or <a href="LilyRiopelleResume.pdf" download="LilyRiopelleResume">download</a> it here!
       </div>
 
+      <div class="contact">
+        <h3>GET IN TOUCH!</h3>
+        <p>
+          Feel free to email me at lilykriopelle (at) gmail (dot) com.
+        </p>
+      </div>
     </main>
   </body>
 </html>
