Add new skills to skills list.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
         </p>
 
         <p>
-          I currently teach Full-Stack Web Development at <a href="http://appacademy.io">App Academy</a>.
+          Until recently, I taught Full-Stack Web Development at <a href="http://appacademy.io">App Academy</a> NYC.
+          At the moment, I'm consulting on several projects while spending the summer away from the city.
           When I'm not teaching or coding, I can usually be found consuming
           dangerous quantities of iced coffee and/or adventuring around my beautiful hometown, NYC.
         </p>
@@ -79,7 +80,13 @@
             <i class="devicon-python-plain-wordmark colored"></i>
           </li>
           <li class="skill">
+            <i class="devicon-nodejs-plain colored"></i>
+          </li>
+          <li class="skill">
             <i class="devicon-postgresql-plain-wordmark colored"></i>
+          </li>
+          <li class="skill">
+            <i class="devicon-mongodb-plain-wordmark colored"></i>
           </li>
           <li class="skill">
             <i class="devicon-javascript-plain colored"></i>
@@ -88,16 +95,19 @@
             <i class="devicon-react-original-wordmark colored"></i>
           </li>
           <li class="skill">
-            <i class="devicon-jquery-plain-wordmark colored"></i>
+            <i class="devicon-backbonejs-plain-wordmark colored"></i>
           </li>
           <li class="skill">
-            <i class="devicon-backbonejs-plain-wordmark colored"></i>
+            <i class="devicon-jquery-plain-wordmark colored"></i>
           </li>
           <li class="skill">
             <i class="devicon-html5-plain-wordmark colored"></i>
           </li>
           <li class="skill">
             <i class="devicon-css3-plain-wordmark colored"></i>
+          </li>
+          <li class="skill">
+            <i class="devicon-bootstrap-plain-wordmark colored"></i>
           </li>
           <li class="skill">
             <i class="devicon-git-plain-wordmark colored"></i>
@@ -117,11 +127,11 @@
                 SmartCookie (Rails, Backbone.js, jQuery)
               </p>
               <div class="project-links">
-                <a href="http://github.com/lilykriopelle/smart_cookie">GITHUB</a>
+                <a href="http://github.com/lilykriopelle/smart_cookie" target="_blank">GITHUB</a>
               </div>
             </h4>
 
-            <a class="view-project" href="http://www.smart-cookie.co">
+            <a class="view-project" target="_blank" href="http://www.smart-cookie.co">
               Check it out!
             </a>
 
@@ -144,11 +154,11 @@
                 Asteroids (Javascript, HTML5 Canvas, jQuery)
               </p>
               <div class="project-links">
-                <a href="http://github.com/lilykriopelle/asteroids">GITHUB</a>
+                <a href="http://github.com/lilykriopelle/asteroids" target="_blank">GITHUB</a>
               </div>
             </h4>
 
-            <a class="view-project" href="http://www.lilykriopelle.com/asteroids">
+            <a class="view-project" target="_blank" href="http://www.lilykriopelle.com/asteroids">
               Check it out!
             </a>
 
@@ -169,11 +179,11 @@
                 Mello (Rails, React/Flux)
               </p>
               <div class="project-links">
-                <a href="http://github.com/lilykriopelle/ReacTrello">GITHUB</a>
+                <a href="http://github.com/lilykriopelle/ReacTrello" target="_blank">GITHUB</a>
               </div>
             </h4>
 
-            <a class="view-project" href="http://melloreact.herokuapp.com">
+            <a class="view-project" target="_blank" href="http://melloreact.herokuapp.com">
               Check it out!
             </a>
 
@@ -194,10 +204,10 @@
               ActiveRecord Lite (Ruby)
               </p>
               <div class="project-links">
-                <a href="http://www.github.com/lilykriopelle/active_record_lite">GITHUB</a>
+                <a href="http://www.github.com/lilykriopelle/active_record_lite" target="_blank">GITHUB</a>
               </div>
             </h4>
-            <a class="view-project" href="http://www.github.com/lilykriopelle/active_record_lite">
+            <a class="view-project" href="http://www.github.com/lilykriopelle/active_record_lite" target="_blank">
               Check it out!
             </a>
             <img class="project-preview" src="images/activerecord_pic.png" alt="" />
