Make lily silly.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
      <p class="hello">
-       Lily Ri<img class="me" src="images/lily.jpg" alt="" />pelle
+       Lily Ri<img class="me" src="images/silly_lily.jpg" alt="" />pelle
      </p>
 
      <p>
