Change about me copy.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
      <p class="hello">
-       Lily Ri<img class="me" src="images/silly_lily.jpg" alt="" />pelle
+       Lily Riopelle
      </p>
 
      <p>
@@ -61,9 +61,14 @@
 
         <p>
           Until recently, I taught Full-Stack Web Development at <a href="http://appacademy.io">App Academy</a> NYC.
-          At the moment, I'm consulting on several projects while spending the summer away from the city.
-          When I'm not teaching or coding, I can usually be found consuming
+          At the moment, I'm consulting on several projects, running a theatre company, and consuming
           dangerous quantities of iced coffee and/or adventuring around my beautiful hometown, NYC.
+        </p>
+
+        <p>
+          I'm not currently seeking full-time employment, but I'm always looking
+          to expand my network and contribute to exciting projects built by awesome people.
+          If you think I'd be a fit for your team, I'd love to meet you!
         </p>
       </div>
 
@@ -215,7 +220,7 @@
             <img class="project-preview" src="images/activerecord_pic.png" alt="" />
 
             <p class="project-description">
-              <span>Ruby ORM recreating the funtionality of Rails' ActiveRecord</span>
+              <span>Ruby ORM recreating the core funtionality of Rails' ActiveRecord</span>
               <br><br>
               Generates SQL queries based on naming conventions to replicate Rails associations.
               <br><br>
@@ -243,12 +248,6 @@
           </li>
 
         </ul>
-      </div>
-
-      <div class="resume">
-        <h3>WANT TO KNOW MORE?</h3>
-        <br>
-         <a href="documents/LilyRiopelleResume.pdf">Check out</a> my resume, or <a href="LilyRiopelleResume.pdf" download="LilyRiopelleResume">download</a> it here!
       </div>
 
       <div class="contact">
