--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <link href='http://fonts.googleapis.com/css?family=Quicksand|Lobster|Montserrat:400,700|Francois+One|Abril+Fatface' rel='stylesheet' type='text/css'>    <title>Lily Riopelle</title>
     <link rel="stylesheet" type="text/css" href="index.css" media="screen" />
-    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/89f2f44ba07ea3fff7e561c2142813b278c2d6c6/devicon.min.css">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script type="text/javascript">
       $(function() {
@@ -33,16 +33,6 @@
            <img src="images/github.png"/>
          </a>
        </li>
-       <li class="linkedin">
-         <a  href="http://www.linkedin.com/in/riopelle">
-           <img src="images/linkedin.png"/>
-         </a>
-       </li>
-       <li class="twitter" >
-         <a href="http://twitter.com/lilyriopelle">
-           <img class="twitter-pic" src="images/twitter.png"/>
-         </a>
-       </li>
      </ul>
     </h1>
 
@@ -60,14 +50,19 @@
         </p>
 
         <p>
-          Until recently, I taught Full-Stack Web Development at <a href="http://appacademy.io">App Academy</a> NYC.
-          At the moment, I'm consulting on several projects, running a theatre company, and consuming
-          dangerous quantities of iced coffee and/or adventuring around my beautiful hometown, NYC.
+          I work as a consulting full-stack engineer, building out APIs in Ruby, Python, and Javascript, and creating
+          richly interactive front-ends (mostly in React). I also work with artists and arts organizations to
+          create or overhaul their online presence. More often than not, these sorts of jobs have me working in Wordpress,
+          but I believe in using the right tool for the job, and am always adding new technologies to my skillset.
         </p>
 
         <p>
-          I'm not currently seeking full-time employment, but I'm always looking
-          to expand my network and contribute to exciting projects built by awesome people.
+          I'm currently consulting on several software projects, running a theatre company, creating handmade ceramics,
+          and consuming dangerous quantities of iced coffee to make it all possible. In a past life, I taught Full-Stack Web Development at <a href="http://appacademy.io">App Academy</a> NYC.
+        </p>
+
+        <p>
+          I'm always looking to expand my network and contribute to exciting projects built by awesome people.
           If you think I'd be a fit for your team, I'd love to meet you!
         </p>
       </div>
@@ -91,68 +86,27 @@
             <i class="devicon-postgresql-plain-wordmark colored"></i>
           </li>
           <li class="skill">
-            <i class="devicon-mongodb-plain-wordmark colored"></i>
+            <i class="devicon-javascript-plain colored"></i>
           </li>
           <li class="skill">
-            <i class="devicon-javascript-plain colored"></i>
+            <i class="devicon-typescript-plain colored"></i>
           </li>
           <li class="skill">
             <i class="devicon-react-original-wordmark colored"></i>
           </li>
           <li class="skill">
-            <i class="devicon-backbonejs-plain-wordmark colored"></i>
-          </li>
-          <li class="skill">
-            <i class="devicon-jquery-plain-wordmark colored"></i>
-          </li>
-          <li class="skill">
-            <i class="devicon-html5-plain-wordmark colored"></i>
-          </li>
-          <li class="skill">
-            <i class="devicon-css3-plain-wordmark colored"></i>
-          </li>
-          <li class="skill">
-            <i class="devicon-bootstrap-plain-wordmark colored"></i>
-          </li>
-          <li class="skill">
-            <i class="devicon-git-plain-wordmark colored"></i>
-          </li>
-          <li class="skill">
             <i class="devicon-amazonwebservices-plain-wordmark colored"></i>
+          </li>
+          <li class="skill">
+            <i class="devicon-wordpress-plain-wordmark colored"></i>
           </li>
         </ul>
       </div>
 
       <div class="projects">
         <h3>SOME THINGS I'VE MADE</h3>
+        <p>These are all projects I've built for fun – for samples of client work, get it touch! </p>
         <ul class="projects-list group">
-          <li class="project group">
-            <h4 class="project-header group">
-              <p>
-                SmartCookie (Rails, Backbone.js, jQuery)
-              </p>
-              <div class="project-links">
-                <a href="http://github.com/lilykriopelle/smart_cookie" target="_blank">GITHUB</a>
-              </div>
-            </h4>
-
-            <a class="view-project" target="_blank" href="http://www.smart-cookie.co">
-              Check it out!
-            </a>
-
-            <img class="project-preview" src="images/sc_pic.png" alt="" />
-
-            <p class="project-description">
-              <span>Collaborative recipe development platform with annotations inspired by Genius.</span>
-              <br><br>
-              Backbone front end consumes a RESTful JSON API served up by Rails.
-              <br><br>
-              Gets start and end indices for annotations by reading DOM's selection object.
-              <br><br>
-              Supports nested and overlapping annotations.
-            </p>
-          </li>
-
           <li class="project group">
             <h4 class="project-header group">
               <p>
@@ -231,22 +185,15 @@
           <li class="project group">
             <h4 class="project-header group">
               <p>
-              Static Sites! (React, HTML5, CSS3, jQuery, AWS)
+                Custom Websites
               </p>
             </h4>
-            <img class="project-preview" src="images/static_site.png" alt="" />
-
-            <p class="project-description">
-              <span>Custom-Built Static Sites for All Occasions</span>
-              <br><br>
-              When I'm not building web apps, I sometimes design and build static
-              sites for individuals, events, and companies.
-              <br><br>
-              If you need a website, reach out for an up to date portfolio of my
-              web design work.
+            <p>
+              I am passionate about helping artists and arts organizations create an impactful web presence! Whatever your goal – from refreshing your
+              look, adding e-commerce to an existing website, creating a compelling portfolio – I'd love to work with you. An artist myself, I am the
+              ideal collaborator to fellow artists looking to make a splash online!
             </p>
           </li>
-
         </ul>
       </div>
 
