--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <link href='http://fonts.googleapis.com/css?family=Quicksand|Lobster|Montserrat:400,700|Francois+One|Abril+Fatface' rel='stylesheet' type='text/css'>    <title>Lily Riopelle</title>
     <link rel="stylesheet" type="text/css" href="index.css" media="screen" />
-    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script type="text/javascript">
       $(function() {
@@ -51,14 +51,14 @@
 
         <p>
           I work as a consulting full-stack engineer, building out APIs in Ruby, Python, and Javascript, and creating
-          richly interactive front-ends (mostly in React). I also work with artists and arts organizations to
-          create or overhaul their online presence. More often than not, these sorts of jobs have me working in Wordpress,
-          but I believe in using the right tool for the job, and am always adding new technologies to my skillset.
+          richly interactive front-ends (mostly in React). I am also a passionate technical educator and curriculum developer: in a past life, I taught Full-Stack Web Development at <a href="http://appacademy.io">App Academy</a> NYC and recently
+          helped develop several courses on React and Redux for <a href="http://codecademy.com/">Codecademy</a>.
         </p>
 
         <p>
-          I'm currently consulting on several software projects, running a theatre company, creating handmade ceramics,
-          and consuming dangerous quantities of iced coffee to make it all possible. In a past life, I taught Full-Stack Web Development at <a href="http://appacademy.io">App Academy</a> NYC.
+          Beyond engineering, I work as a <a href="http://lilyriopelle.com/">theatre director</a>, primarily developing new plays.
+          For fun, I create handmade ceramics and blown glass, read contemporary fiction authored by women, and take long
+          walks around Brooklyn.
         </p>
 
         <p>
@@ -95,17 +95,16 @@
             <i class="devicon-react-original-wordmark colored"></i>
           </li>
           <li class="skill">
-            <i class="devicon-amazonwebservices-plain-wordmark colored"></i>
+            <i class="devicon-graphql-plain-wordmark colored"></i>
           </li>
           <li class="skill">
-            <i class="devicon-wordpress-plain-wordmark colored"></i>
+            <i class="devicon-amazonwebservices-plain-wordmark colored"></i>
           </li>
         </ul>
       </div>
 
       <div class="projects">
-        <h3>SOME THINGS I'VE MADE</h3>
-        <p>These are all projects I've built for fun – for samples of client work, get it touch! </p>
+        <h3>TAKE A BREAK, PLAY A GAME</h3>
         <ul class="projects-list group">
           <li class="project group">
             <h4 class="project-header group">
@@ -133,76 +132,13 @@
               Implements the separating axis theorem to ensure accurate collision detection.
             </p>
           </li>
-
-          <li class="project group">
-            <h4 class="project-header group">
-              <p>
-                Mello (Rails, React/Flux)
-              </p>
-              <div class="project-links">
-                <a href="http://github.com/lilykriopelle/ReacTrello" target="_blank">GITHUB</a>
-              </div>
-            </h4>
-
-            <a class="view-project" target="_blank" href="http://melloreact.herokuapp.com">
-              Check it out!
-            </a>
-
-            <img class="project-preview" src="images/mello_pic.png" alt="" />
-
-            <p class="project-description">
-              <span>A project management tool with intuitive UI built with Rails and React.</span>
-              <br><br>
-              React/Flux front-end consumes a JSON API served up by Rails for a seamless single-page user experience.
-              <br><br>
-              Uses ReactDnD to achieve fluid drag-and-drop user interactions.
-            </p>
-          </li>
-
-          <li class="project group">
-            <h4 class="project-header group">
-              <p>
-              ActiveRecord Lite (Ruby)
-              </p>
-              <div class="project-links">
-                <a href="http://www.github.com/lilykriopelle/active_record_lite" target="_blank">GITHUB</a>
-              </div>
-            </h4>
-            <a class="view-project" href="http://www.github.com/lilykriopelle/active_record_lite" target="_blank">
-              Check it out!
-            </a>
-            <img class="project-preview" src="images/activerecord_pic.png" alt="" />
-
-            <p class="project-description">
-              <span>Ruby ORM recreating the core funtionality of Rails' ActiveRecord</span>
-              <br><br>
-              Generates SQL queries based on naming conventions to replicate Rails associations.
-              <br><br>
-              Utilizes advanced Ruby language features, such as meta-programming and reflection.
-            </p>
-          </li>
-
-          <li class="project group">
-            <h4 class="project-header group">
-              <p>
-                Custom Websites
-              </p>
-            </h4>
-            <p>
-              I am passionate about helping artists and arts organizations create an impactful web presence! Whatever your goal – from refreshing your
-              look, adding e-commerce to an existing website, creating a compelling portfolio – I'd love to work with you. An artist myself, I am the
-              ideal collaborator to fellow artists looking to make a splash online!
-            </p>
-          </li>
         </ul>
       </div>
 
       <div class="contact">
-        <h3>GET IN TOUCH!</h3>
+        <h3>GET IN TOUCH</h3>
         <br>
-        <p>
-          Feel free to email me at lilykriopelle (at) gmail (dot) com.
-        </p>
+        <p> Feel free to email me at lilykriopelle (at) gmail (dot) com.</p>
       </div>
     </main>
   </body>
