--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <p>
           I work as a consulting full-stack engineer, building out APIs in Ruby, Python, and Javascript, and creating
-          richly interactive front-ends (mostly in React). I am also a passionate technical educator and curriculum developer: in a past life, I taught Full-Stack Web Development at <a href="http://appacademy.io">App Academy</a> NYC and recently
+          richly interactive front-ends (mostly in React). I am also a passionate technical educator and curriculum developer: in a past life, I taught Full-Stack Web Development at <a href="http://appacademy.io">App Academy</a> NYC, and I recently
           helped develop several courses on React and Redux for <a href="http://codecademy.com/">Codecademy</a>.
         </p>
 
